[package]
name = "rtpigate"
version = "0.1.4"
edition = "2024"
authors = ["Jeff Deaton"]
description = "APRS iGate for KA9Q-Radio backend"
license = "GPL-3.0"
repository = "https://github.com/Deatojef/rtpigate"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
flexi_logger = { version = "0.31.2", features = ["colors"] }
log = "0.4.27"
toml = "0.9.5"
socket2 = "0.6.0"
tokio-util = "0.7.16"
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
#aprs-rtp = "0.1"
aprs-rtp = "0.2"
aprs-decode = "0.1"

[package.metadata.deb]
maintainer = "Jeff Deaton <deatojef@yahoo.com>"
section = "hamradio"
priority = "optional"
extended-description = "Receives audio streams over RTP multicast from KA9Q-Radio, demodulates AFSK, decodes the resulting APRS packets, filters them, and gates them to the APRS-IS internet network. Includes a web dashboard with real-time packet display via Server-Sent Events."
depends = "$auto"
conf-files = ["/etc/rtpigate/config.toml"]
maintainer-scripts = "deploy/debian/"
assets = [
    ["target/release/rtpigate", "usr/local/bin/", "755"],
    ["config.toml", "etc/rtpigate/config.toml", "640"],
    ["frontend/index.html", "usr/local/share/rtpigate/frontend/", "644"],
    ["frontend/assets/style.css", "usr/local/share/rtpigate/frontend/assets/", "644"],
    ["frontend/assets/app.js", "usr/local/share/rtpigate/frontend/assets/", "644"],
    ["frontend/assets/vendor/**/*", "usr/local/share/rtpigate/frontend/assets/vendor/", "644"],
    ["frontend/assets/aprssymbols/**/*", "usr/local/share/rtpigate/frontend/assets/aprssymbols/", "644"],
    ["deploy/rtpigate.service", "lib/systemd/system/rtpigate.service", "644"],
]
