[package]
name = "rtpigate"
version = "0.4.1"
edition = "2024"
authors = ["Jeff Deaton"]
description = "APRS iGate consuming the aprs-streamd decoded-APRS multicast stream"
license = "GPL-3.0"
repository = "https://github.com/Deatojef/rtpigate"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
flexi_logger = { version = "0.31.2", features = ["colors"] }
log = "0.4.27"
toml = "0.9.5"
socket2 = "0.6.0"
tokio-util = "0.7.16"
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
# rtpigate no longer owns the RTP-listen -> demod -> decode chain. It subscribes to
# the decoded, typed frames published by aprs-streamd and consumes them via the
# shared aprs-stream crate. aprs-decode is still used directly for the parsed APRS
# payload types (position/Mic-E/object/item, symbol) carried on those frames.
aprs-stream = { git = "https://github.com/deatojef/aprs-stream.git", tag = "v0.2.0" }
aprs-decode = "0.1"
gpsd_proto = "1.0.0"
native_db = "0.8.2"
native_model = "=0.4.20"

[package.metadata.deb]
maintainer = "Jeff Deaton <deatojef@yahoo.com>"
section = "hamradio"
priority = "optional"
extended-description = "Subscribes to the decoded-APRS multicast stream published by aprs-streamd (typed AprsFrame messages), filters the packets per APRS-IS igating rules, and gates qualifying packets to the APRS-IS internet network. The RTP audio, AFSK demodulation, and AX.25/APRS decode happen once, upstream in aprs-streamd. Includes a web dashboard with real-time packet display via Server-Sent Events."
depends = "$auto"
conf-files = ["/etc/rtpigate/config.toml"]
maintainer-scripts = "deploy/debian/"
assets = [
    ["target/release/rtpigate", "usr/local/bin/", "755"],
    ["config.toml", "etc/rtpigate/config.toml", "640"],
    ["frontend/index.html", "usr/local/share/rtpigate/frontend/", "644"],
    ["frontend/assets/style.css", "usr/local/share/rtpigate/frontend/assets/", "644"],
    ["frontend/assets/app.js", "usr/local/share/rtpigate/frontend/assets/", "644"],
    ["frontend/assets/vendor/**/*", "usr/local/share/rtpigate/frontend/assets/vendor/", "644"],
    ["frontend/assets/aprssymbols/**/*", "usr/local/share/rtpigate/frontend/assets/aprssymbols/", "644"],
    ["deploy/rtpigate.service", "lib/systemd/system/rtpigate.service", "644"],
]
